--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,10 +15,10 @@
 <h3>User Links</h3>
 <ul>
   <li>
-    <a routerLink="admin/login">Login</a>
+    <a routerLink="user/login">Login</a>
   </li>
   <li>
-    <a routerLink="admin/list">List</a>
+    <a routerLink="user/list">List</a>
   </li>
 </ul>
 <router-outlet></router-outlet>
